[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://Assets/character-sprite.json" type="PackedScene" id=2]
[ext_resource path="res://Assets/SFX/Jump/jump_02.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/Hit/Hit.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5.5, 9.5 )

[node name="Character" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 14
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}
GRAVITY = 20
ACCELERATION = 40
MAX_SPEED = 200
JUMP_FORCE = -500
WORLD_LIMIT_BOTTOM = 500
WORLD_LIMIT_LEFT = 0

[node name="Sprite" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 8, 16 )
_sections_unfolded = [ "Transform" ]

[node name="RayCast2DStomp" type="RayCast2D" parent="Sprite" index="2"]

position = Vector2( 0, 16 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 1 )
collision_mask = 4
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 8.5, 22.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="JumpSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HitSound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


